[package]
name = "king-finance"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
reqwest = "0.11"
